--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
           <div class="detail-box">
             <div class="heading_container">
                           <h2>
-                About US
+                About Us
               </h2>
             </div>
             <h3>
