--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
               Cultivate academic responsibility and good standards of professional practice.
             </p>
             <h3>
-              Overview of Core activities 
+              Overview of Core Activities 
             </h3>
               <p>
                 Mathematics Club.<br>
@@ -132,9 +132,9 @@
               </h3>
               <p>
                 Appreciate the creative nature of mathematics and Sciences,
-                 <br>statistics, and teaching, and have the opportunity to participate<br> 
-                 in the discovery of new results, novel and approaches to problems,
-                 or innovative ways to engage students in the learning of maths and statistics.
+                 <br>Statistics, and Teaching, also have the opportunity to participate<br> 
+                 in the discovery of new results, Novel and approaches to problems
+                 or innovative ways to engage students in the learning of Maths and Statistics.
               </p>
             <a href="">
               Read More
@@ -243,7 +243,7 @@
               Info
             </h4>
             <p>
-            For more information, you can visit our site that is situated at 11 William Avenue, Vincent East London
+            For more information, you can visit our site situated at 11 William Avenue, Vincent, East London
             </p>
           </div>
         </div>
